tests/NormalTests/paczka1/fuzzy1/11563799.err
Error in line 4: wnOGecGW S426 26,2
Error in line 5: Jz2lk S984 15,1
Error in line 6: wnOGecGW S984 1,4
Error in line 11: 5COO3 S843 6,4
